--- a/KosaESS/src/main/resources/static/css/student/mypage.css
+++ b/KosaESS/src/main/resources/static/css/student/mypage.css
@@ -26,7 +26,7 @@ input::placeholder {
 }
 
 .resnText1, .resnText2 {
-	width: 85%;
+	width: 80%;
 	color: black;
 	padding: 3%;
 	margin-bottom: 5%;
@@ -35,10 +35,11 @@ input::placeholder {
 	border-radius: 10px;
 	font-size: 15px;
 	font-weight: 500;
+	resize: none;
 }
 
 .resnText1::placeholder, .resnText2::placeholder {
-	color: black;
+	color: darkgray;
 }
 
 #checkPassword {
@@ -73,7 +74,7 @@ input::placeholder {
 	top: 50%;
 	left: 50%;
 	width: 500px;
-	height: 520px;
+	height: 410px;
 	text-align: center;
 	background-color: rgb(255, 255, 255);
 	border-radius: 10px;
@@ -93,17 +94,13 @@ input::placeholder {
 
 .upload-area {
 	margin: 5% auto;
-	padding: 13% 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	background-color: white;
 	color: black;
-	border-style: dashed;
-	border-color: darkgray;
 	font-size: 18px;
 	width: 90%;
-	border-radius: 10px;
 }
 
 .upload-name1, .upload-name2, .upload-name3 {
@@ -140,14 +137,20 @@ input::placeholder {
 	justify-content: flex-end;
 }
 
+button {
+	cursor: pointer;
+}
+
 .aplyBtn, .closeModalBtn, .closeBtn, .submitBtn {
-	padding: 2% 5%;
+	padding: 3% 7%;
 	font-weight: bold;
 	border-radius: 10px;
 	color: #FFF;
 	background-color: #0E5881;
 	margin: 0 2%;
 	border: 0;
+	font-size: 15px;
+	cursor: pointer;
 }
 
 table {
@@ -245,6 +248,7 @@ td button {
 	color: white;
 	margin: 0 2%;
 	width: 60%;
+	cursor: pointer;
 }
 
 .applyTable td:nth-child(1) {
