--- a/KosaESS/src/main/resources/templates/student/inquiry_detail.html
+++ b/KosaESS/src/main/resources/templates/student/inquiry_detail.html
@@ -6,7 +6,7 @@
 <link th:href="@{/css/student/post_detail.css}" rel="stylesheet">
 <link rel="icon" href="/img/icon.png" />
 <meta charset="UTF-8">
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 	<div th:replace="~{/include/student_header :: header}"
@@ -16,7 +16,7 @@
 			<div class="maintext">
 				<h1 style="color: #0E5881;">문의사항 상세</h1>
 			</div>
-			<div class="content">
+			<div class="content" style="padding-bottom: 2%;">
 				<table>
 					<tr>
 						<th>문의사항 제목</th>
@@ -27,7 +27,8 @@
 					</tr>
 					<tr>
 						<th>게시일자</th>
-						<td style="width: 20%;"><span th:text="${inquiryDetail.rgstDd}"></span></td>
+						<td style="width: 20%;"><span
+							th:text="${inquiryDetail.rgstDd}"></span></td>
 						<th>조회수</th>
 						<td style="width: 15%;"><span
 							th:text="${inquiryDetail.postHit}"></span></td>
@@ -42,7 +43,7 @@
 						<td colspan="7"><ul
 								style="margin: 0; text-align: left; padding-left: 3%;">
 								<li th:each="FileVO : ${inquiryFileList}"><a
-									style="width: 100%; display: flex;"
+									style="display: flex;"
 									th:href="@{/download/file/__${FileVO.fileId}__/__${FileVO.fileSubId}__}"
 									th:title="${FileVO.fileNm}"> <img style="height: 20px;"
 										th:src="@{/img/file_icon.png}" alt="file  아이콘"> <span
@@ -58,8 +59,14 @@
 					</pre>
 					</div>
 				</div>
+				<div class="rgstBtn" th:if="${inquiryDetail.rgsterId} == ${stdtId}">
+					<button class="update" style="margin-right: 2%;">수정하기</button>
+					<button class="delete">삭제하기</button>
+				</div>
 			</div>
-			<div class="content" style="padding: 0 2%;">
+			<div
+				th:if="${replyDetail != null and not #lists.isEmpty(replyDetail)}"
+				class="content" style="padding: 0 2%;">
 				<ul style="width: 100%;">
 					<li th:each="postVO : ${replyDetail}">
 						<table style="margin: 1% auto;" class="reply">
