--- a/KosaESS/src/main/resources/templates/student/inquiry_list.html
+++ b/KosaESS/src/main/resources/templates/student/inquiry_list.html
@@ -27,7 +27,21 @@
 					<input type="submit" class="openformBtn" value="글쓰기">
 				</div>
 			</div>
-			<table class="inquiry-table" style="width: 90%; margin: auto;">
+			<div class="subsearch">
+				<div>
+					<h3 class="totalcnt">
+						총 <span class="totalRowCount" th:text="${#lists.size(postList)}"></span>건
+					</h3>
+				</div>
+				<div>
+					<span>페이지당 목록 수</span> <select id="pageList">
+						<option value="10">10개씩</option>
+						<option value="20">20개씩</option>
+						<option value="30">30개씩</option>
+					</select>
+				</div>
+			</div>
+			<table class="inquiry-table" style="margin: auto;">
 				<thead>
 					<tr class="inquiryRow" style="border: none;">
 						<td>번호</td>
@@ -52,6 +66,11 @@
 						<td style="display: none;"><span th:text="${postVO.postId}"></span></td>
 					</tr>
 				</tbody>
+				<tfoot class="inquiryFoot" style="display: none; height: 300px;">
+					<tr>
+						<td><h3>조회된 결과 없습니다.</h3></td>
+					</tr>
+				</tfoot>
 			</table>
 			<div class="paging">
 				<i class="left" id="first_page" th:src="@{/img/first_page}"></i> <i
