--- a/KosaESS/src/main/resources/templates/student/main.html
+++ b/KosaESS/src/main/resources/templates/student/main.html
@@ -4,6 +4,9 @@
 <link th:href="@{/css/student/header.css}" rel="stylesheet">
 <link th:href="@{/css/student/footer.css}" rel="stylesheet">
 <link th:href="@{/css/student/main.css}" rel="stylesheet">
+<link th:href="@{/css/student/calendar.css}" rel="stylesheet">
+<script
+	src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js'></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <link rel="icon" href="/img/icon.png" />
 <meta charset="UTF-8">
@@ -29,11 +32,12 @@
 
 	<div class="container" style="margin-top: -7%;">
 		<div class="button-list">
-			<button class="button-left" style="margin-right: 1%;"></button>
-			<button class="button-right"></button>
+			<button class="banner-button button-left" style="margin-right: 1%;"></button>
+			<button class="banner-button button-right"></button>
 		</div>
 		<div class="maincontent">
-			<div class="login con" style="margin-bottom: 4%; padding: 3%;">
+			<div class="login con"
+				style="margin-bottom: 4%; padding: 2%; width: 13%;">
 				<div th:if="${session.userEmail==null}">
 					<h2>회원가입후 이용가능</h2>
 				</div>
@@ -64,7 +68,7 @@
 				</div>
 			</div>
 			<div class="login con"
-				style="margin-bottom: 4%; text-align: center; padding: 3%;">
+				style="margin-bottom: 4%; text-align: center; padding: 2%; width: 18%;">
 				<div th:if="${session.userEmail==null}">
 					<h2>로그인</h2>
 					<form th:action="@{/login}" method="post" class="">
@@ -84,13 +88,14 @@
 						<h3>수강중인 교육이 없습니다.</h3>
 						<div
 							style="align-items: center; justify-content: center; display: flex;">
-							<a th:href="@{/student/class}"><img style="height: 70px;"
-								th:src="@{/img/hat_navy.png}">
+							<a th:href="@{/student/class/list}"><img
+								style="height: 70px;" th:src="@{/img/hat_navy.png}">
 								<h3>교육지원하러 가기</h3> </a>
 						</div>
 					</div>
 					<div th:if="${ingClassVO != null}">
 						<div class="inouttm">
+							<p id="dDay"></p>
 							<h3 th:text="${ingClassVO.clssNm}" style="margin: 0 0 2% 0;"></h3>
 							<div class="viewinout">
 								<div>
@@ -114,25 +119,20 @@
 			</div>
 			<div class=" con" style="width: 45%; margin-bottom: 4%;">
 				<div>
-					<h2>커다란 달력</h2>
+					<h2 th:if="${session.userEmail == null}">지원 일정</h2>
+					<h2 th:if="${session.userEmail != null}">지원 및 교육 일정</h2>
+					<div style="width: 100%;">
+						<div class="content">
+							<div id="calendar-container"
+								style="background: white; width: 600px;">
+								<div id="calendar"></div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
-			<div class="class con" style="width: 45%;">
-				<h2 style="margin-bottom: 0;">접수중인 교육</h2>
-				<a class="plus" style="display: block; text-align: end;"
-					th:href="@{/student/class/list}">+</a>
-				<hr>
-				<table>
-					<tr th:each="classVO : ${classList}">
-						<td style="width: 70%;"><a
-							th:href="@{/student/class/view/__${classVO.clssId}__}"
-							th:text="${classVO.clssNm}"></a></td>
-						<td style="width: 30%; text-align: right;"
-							th:text="${classVO.aplyStartDd} +' ~ '+ ${classVO.aplyEndDd}"></td>
-					</tr>
-				</table>
-			</div>
-			<div class="notice con" style="background: #E7EFF3; width: 40%;">
+			<div class="notice con"
+				style="background: #E7EFF3; width: 43%; margin-bottom: 4%;">
 				<h2 style="margin-bottom: 0;">공지사항</h2>
 				<a class="plus" style="display: block; text-align: end;"
 					th:href="@{/student/notice/list}">+</a>
@@ -142,10 +142,44 @@
 						<td style="width: 75%;"><a
 							th:href="@{/student/notice/view/__${postVO.postId}__}"
 							th:text="${postVO.postTitle}"></a></td>
-						<td style="width: 25%; text-align: right;"
-							th:text="${postVO.rgstDd}"></td>
+						<td style="width: 25%; text-align: right;"><span
+							th:if="${postVO.rgstDd == null}">미정</span> <span
+							th:if="${postVO.rgstDd != null}" th:text="${postVO.rgstDd}"></span>
+						</td>
 					</tr>
 				</table>
+			</div>
+			<div class="class con" style="width: 45%; margin-bottom: 4%;">
+				<h2 style="margin-bottom: 0;">접수중인 교육</h2>
+				<a class="plus" style="display: block; text-align: end;"
+					th:href="@{/student/class/list}">+</a>
+				<hr>
+				<table>
+					<tr th:each="classVO : ${classList}">
+						<td style="width: 70%;"><a
+							th:href="@{/student/class/view/__${classVO.clssId}__}"
+							th:text="${classVO.clssNm}"></a></td>
+						<td style="width: 30%; text-align: right;"><span
+							th:if="${classVO.aplyStartDd == null}">미정</span> <span
+							th:if="${classVO.aplyStartDd != null}"
+							th:text="${classVO.aplyStartDd + ' ~ ' + classVO.aplyEndDd}"></span>
+						</td>
+					</tr>
+				</table>
+			</div>
+
+			<div class="news con" style="background: #E7EFF3; width: 43%;">
+				<h2 style="margin-bottom: 0;">협회 뉴스</h2>
+				<a class="plus" style="display: block; text-align: end;"
+					th:href="@{/student}">+</a>
+				<hr>
+			</div>
+			<div class="youtube con" style="background: #E7EFF3; width: 45%;">
+				<h2 style="margin-bottom: 0;">협회 유튜브</h2>
+				<a class="plus" style="display: block; text-align: end;"
+					th:href="@{https://www.youtube.com/@kosa3223/featured}"
+					target='_blank'>+</a>
+				<hr>
 			</div>
 		</div>
 	</div>
@@ -153,6 +187,7 @@
 		style="width: 100%;"></div>
 	<script th:inline="javascript">
 		/* 스크립트 내에서 Thymeleaf 변수를 선언하고 값 할당 */
+		var IngclssEndDd = /*[[${ingClassVO?.clssEndDd}]]*/'';
 		var clssId = /*[[${ingClassVO?.clssId}]]*/'';
 		var lastVO = /*[[${lastWlogVO}]]*/'';
 		var lastLogTime = /*[[${lastLogTime}]]*/'';
@@ -181,7 +216,10 @@
 
 		document.getElementById("lastLog").textContent = lastLogDd;
 	</script>
-
+	<script th:if="${session.userEmail == null}"
+		src="/js/student/calendar.js"></script>
+	<script th:if="${session.userEmail != null}"
+		src="/js/student/calendar2.js"></script>
 	<script src="/js/student/main.js"></script>
 
 </body>
