--- a/KosaESS/src/main/resources/templates/manager/wlog_list.html
+++ b/KosaESS/src/main/resources/templates/manager/wlog_list.html
@@ -26,12 +26,11 @@
 	<div class="title_wrap">
 		<span class="title" th:text="${title}"></span>
 		<br>
-		<!-- 검색 조건 저장 style="display: none;" -->
-		<input id="class_id_save" type="text">
-		<input id="start_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssStartDd:null}">
-		<input id="end_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssEndDd:null}">
-		<input id="keyword_save" type="text">
-		<div>
+		<div style="display: none;" class="검색조건저장">
+			<input id="class_id_save" type="text">
+			<input id="start_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssStartDd:null}">
+			<input id="end_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssEndDd:null}">
+			<input id="keyword_save" type="text">
 			<input type="checkbox" class="chk_wok_save" th:value="${wlogCd.cmcdId}" th:each="wlogCd:${wlogCdList}" checked="checked">
 			<input type="checkbox" class="resn_only_save">
 			<input type="checkbox" class="contain_delete_save">
@@ -101,7 +100,7 @@
 				<span class="wlog_count_unit">건</span>
 			</span>
 			<span th:each="wlogCd:${wlogCdList}" class="wlog_controller">
-				<button onclick="wlogUpdate(this)" th:value="${wlogCd.cmcdId}" th:text="${wlogCd.cmcdNm}" class="wlog_btn"></button>
+				<button onclick="updateWlogCode(this)" th:value="${wlogCd.cmcdId}" th:text="${wlogCd.cmcdNm}" class="wlog_btn"></button>
 			</span>
 		</div>
 		<!-- End : 테이블 조작 -->
@@ -126,13 +125,13 @@
 			
 			<tbody id="wlog_list_tbody">
 				<tr th:each="wlog:${wlogList}" class="wlog_list_tbody_row">
-					<td> <input type="checkbox" class="chk_wlog"> </td>
+					<td> <input type="checkbox" class="chk_wlog" th:value="${wlog.wlogId}"> </td>
 					<td class="row_number" th:text="${wlogStat.count}">번호</td>
 <!-- 					<td class="row_number" th:text="${wlog.wlogId}">번호</td> -->
 					<td class="row_name" th:text="${wlog.stdtNm}">이름</td>
 					<td class="row_email" th:text="${wlog.userEmail}">이메일</td>
-					<td class="row_intime" th:text="${#dates.format(wlog.inTm,'yyyy-MM-dd HH:mm:ss')}">출근 기록</td>
-					<td class="row_outtime" th:text="${#dates.format(wlog.outTm,'yyyy-MM-dd HH:mm:ss')}">퇴근 기록</td>
+					<td class="row_intime" th:text="${wlog.inTm!=null?#dates.format(wlog.inTm,'yyyy-MM-dd HH:mm:ss'):'-'}">출근 기록</td>
+					<td class="row_outtime" th:text="${wlog.outTm!=null?#dates.format(wlog.outTm,'yyyy-MM-dd HH:mm:ss'):'-'}">퇴근 기록</td>
 					<td class="row_totaltime" th:text="${#numbers.formatDecimal(wlog.wlogTotalTm, 1, 1)}">출석 인정 시간</td>
 					<td class="row_wlogcode" th:text="${wlog.wlogCd}">출석 상태</td>
 					<td class="row_isdelete" th:text="${wlog.deleteYn}">삭제 여부</td>
