[dabin][#update] 마이페이지 동기처리

--- a/KosaESS/src/main/resources/static/css/student/main.css
+++ b/KosaESS/src/main/resources/static/css/student/main.css
@@ -220,6 +220,15 @@ input::placeholder {
 	text-align: center;
 }
 
+.aplyList, .rgstList{
+	cursor: pointer;
+}
+
+.aplyList:hover, .rgstList:hover {
+	background: white;
+}
+
+
 .inouttm {
 	display: flex;
 	flex-direction: column;
