--- a/KosaESS/src/main/resources/static/css/student/mypage.css
+++ b/KosaESS/src/main/resources/static/css/student/mypage.css
@@ -7,8 +7,14 @@
 	width: 100%;
 }
 
+.listHead {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
 h3 {
-	margin-top: 0;
+	margin: 0;
 	font-size: 20px;
 }
 
